# node-xmp

./: .envrc  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Vagrantfile  _test.js  cli.js  index.js  node-xmp-os.h  node-xmp-unix.cxx  node-xmp-win.cxx  node-xmp.cxx  node-xmp.h  package-lock.json  package.json  sxmp-files-wrapper.cxx  sxmp-meta-wrapper.cxx  test.js  xmp-constants.cxx  xmp-ns.cxx
XMP-Toolkit-SDK-CC201607/XMPCommon/ImplHeaders/: ConfigurableImpl.h
XMP-Toolkit-SDK-CC201607/XMPCommon/Interfaces/BaseInterfaces/: IConfigurable_I.h
XMP-Toolkit-SDK-CC201607/XMPCommon/Utilities/: TAllocator.h
XMP-Toolkit-SDK-CC201607/XMPCore/ImplHeaders/: DOMImplementationRegistryImpl.h  NameSpacePrefixMapImpl.h  StructureNodeImpl.h
src/: node-xmp.h  sxmp-files-wrapper.cxx  sxmp-meta-wrapper.cxx  xmp-constants.cxx
src/unix/: node-xmp-unix.cxx
tests/: file.test.js  meta.test.js  ns.test.js
